# LearningRobotSkills

./: .gitignore  CMakeLists.txt  README.md  index.html  plotter.ipynb  website_style.css
00-force_sensor_calibration/: CMakeLists.txt  bias_measurement.cpp  bias_measurement_Bonnie_aug30(copy).cpp  tool_calibration.cpp
00-force_sensor_calibration/calibration_files/: calibration_Bonnie_FT_sensor_allegro_aug30.xml  calibration_Clyde_FT_ssensor_allegroHand_august_28_2021.xml  sample_sensor_bias.xml  sensor_bias.xml
01-RemotePandaControl_haptic/: CMakeLists.txt  controller.cpp
01-RemotePandaControl_robot/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
01-RemotePandaControl_robot/data_logging/: plotter.py
01-dual_proxy_motion_haptic/: CMakeLists.txt  controller.cpp
01-dual_proxy_motion_haptic/data_logging/: plotter.py
01-dual_proxy_motion_robot/: CMakeLists.txt  controller.cpp  simviz.cpp
02-dual_proxy_motion_normal_force_haptic/: CMakeLists.txt  controller.cpp
02-dual_proxy_motion_normal_force_robot/: CMakeLists.txt  controller.cpp  panda_arm_allegro.urdf  simviz.cpp  world.urdf
03-dual_proxy_surface_alignment_haptic/: CMakeLists.txt  controller.cpp
03-dual_proxy_surface_alignment_robot/: CMakeLists.txt  controller.cpp  panda_arm.urdf  panda_arm_allegro.urdf  panda_arm_borns.urdf  simviz.cpp  world.urdf
04-dual_proxy_impedance_haptic/: CMakeLists.txt  controller.cpp
04-dual_proxy_impedance_robot/: CMakeLists.txt  controller.cpp  simviz.cpp  world.urdf
04-unified_motion_force/: 02-redundant_arm.html  CMakeLists.txt  controller.cpp  launch.sh  panda_arm.urdf
05-dual_proxy_impedance_haptic/: CMakeLists.txt  controller.cpp
05-dual_proxy_impedance_robot/: CMakeLists.txt  controller.cpp  panda_arm.urdf  simviz.cpp
05-dual_proxy_impedance_robot/data_logging/: plotter.py
control_lead/: CMakeLists.txt  lead_haptic_controller.cpp  lead_robot_controller.cpp  panda_arm_allegro.urdf  world.urdf
control_support/: CMakeLists.txt  panda_arm.urdf  support_haptic_controller.cpp  support_robot_controller.cpp
docs/: index.html
force_sensor_calibration/: CMakeLists.txt  bias_measurement.cpp  tool_calibration.cpp
force_sensor_calibration/calibration_files/: calibration_Bonnie_ATI_allegro_cap_nov9_2021.xml  calibration_Clyde_ATI_allegro_bulb_dec12_2021.xml  calibration_Clyde_ATI_aug19_2021.xml  calibration_Clyde_ATI_bottle_nov9_2021.xml  calibration_Clyde_ATI_cap_dec9_2021.xml.xml  calibration_Clyde_ATI_rigidMCap_feb23_2022.xml  sensor_bias_Bonnie_ATI_allegro_cap_nov9_2021.xml  sensor_bias_Clyde_ATI_allegro_bottle_nov9_2021.xml  sensor_bias_Clyde_ATI_allegro_bulb_dec12_2021.xml  sensor_bias_Clyde_ATI_cap_dec9_2021.xml  sensor_bias_Clyde_ATI_rigidMCap_feb23_2022.xml
franka_interface_ee_calibration/: ATI_capM_rigidYellowAttachment.json  allegroHand.json  allegroHandAndATIForceSensor_8.26.2021.json  allegro_ATI_bulb_11.9.21.json  allegro_ATI_capM_11.9.21.json
haptic_control/: CMakeLists.txt  device_controller.cpp  launch_device_control.sh  launch_haptic_control_robot_Clyde.sh  panda_arm.urdf  panda_arm_allegro.urdf  panda_arm_allegro_left.urdf  robot_controller.cpp  simviz.cpp
hrc_ui/: CMakeLists.txt
hrc_ui/02-joint-posori/: 02-joint-posori.html  README.md  writekeys.py
launch_scripts/: 00-open_panda_browsers.sh  01-start_redis-server.sh  02-redis-cli.sh  03-start_optitrack_driver.sh  04-start_force_sensor_driver.sh  05-start_haptic_device_drivers.sh  06-start_hand_driver.sh  07-start_robot_driver.sh  07-start_robot_driver_Clyde.sh  08-start_robot_controller_Bonnie.sh  08-start_robot_controller_Clyde.sh  09-start_haptic_controller.sh  dump.rdb
lead_control/: CMakeLists.txt  lead_device_controller.cpp  lead_robot_controller.cpp  panda_arm_allegro_left.urdf
panda_ee_calibration/: ATIforceSensor.json  allegro_ATI_bottleM_11.9.21.json  frankaGripperAndATIForceSensor.json
src/: Logger.h
support_control/: CMakeLists.txt  robot_controller.cpp  support_robot_controller.cpp
xx-unified_motion_force/: CMakeLists.txt.bk  controller.cpp  keys.h  kuka_iiwa.urdf  panda_arm.urdf  simviz.cpp  world.urdf
